[package]
name = "pmu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive", "cargo"] }
rodio = "^0.14"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dirs = "^4"
rusqlite = { version = "^0.26", features = ["bundled"] }
discord-rich-presence = "^0.1"
regex = "1"