[package]
name = "pmu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive", "cargo"] }
# FIXME: use "*" to match rodio but currently has API mismatch
symphonia = "0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dirs = "^4"
rusqlite = { version = "^0.26", features = ["bundled"] }
discord-rich-presence = "^0.1"
regex = "1"
rustfm-scrobble = "^1.1"

# FIXME: use crates.io release for rodio for symphonia
[dependencies.rodio]
git = "https://github.com/RustAudio/rodio.git"
rev = "2c171d6"
default-features = false
features = ["symphonia-all", "vorbis"]